@@ -1,0 +1,24 @@
+
+.*:     file format .*
+
+#
+# The GOT layout is:
+#
+#	- 2 reserved entries
+#	- 5 local page entries
+#	- 1 global entry for "undef"
+#	- 4 TLS entries
+#
+# The order of the TLS entries is:
+#
+#	foo0	(offset 0x20)
+#	foo2	(offset 0x24)
+#	foo3	(offset 0x28)
+#	foo1	(offset 0x2c)
+#
+# Any order would be acceptable, but it must match the .d dump.
+#
+Contents of section \.got:
+ 90000 00000000 80000000 00000000 00000000  .*
+ 90010 00000000 00000000 00000000 00000000  .*
+ 90020 0000abc0 0000abc8 0000abcc 0000abc4  .*
